[gd_scene load_steps=6 format=3 uid="uid://bfxvb160cyohr"]

[ext_resource type="PackedScene" uid="uid://dujgwpibibjgl" path="res://Scenes/UI/vignette.tscn" id="1_1ko1y"]
[ext_resource type="Script" path="res://Scripts/UI/main_menu.gd" id="1_ah5dj"]
[ext_resource type="Texture2D" uid="uid://c84lf0ysjbram" path="res://Assets/Background/MainMenuScreen.jpg" id="2_hmbjl"]
[ext_resource type="PackedScene" uid="uid://ct85uhd6hy7mo" path="res://Scenes/UI/sound_button.tscn" id="3_igb0v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amxbp"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ah5dj")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hmbjl")
expand_mode = 1

[node name="Vignette" parent="." instance=ExtResource("1_1ko1y")]

[node name="MainPanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = 88.0
offset_right = 214.0
offset_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_amxbp")

[node name="MarginContainer" type="MarginContainer" parent="MainPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanelContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="PlayButton" parent="MainPanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_igb0v")]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "Play"

[node name="OptionsButton" parent="MainPanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_igb0v")]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "Options"

[node name="StatusButton" parent="MainPanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_igb0v")]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "Status"

[node name="QuitButton" parent="MainPanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_igb0v")]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "Quit"
